# demo-python-fastapi-deta

./: README.md  Spacefile  main.py  pyproject.toml
